the previous changes and those that you said to try, almost everything worked out for me.

--- a/tetris.vcxproj
+++ b/tetris.vcxproj
@@ -145,6 +145,14 @@
     <ClCompile Include="BaseController.cpp" />
     <ClCompile Include="BaseFigure.cpp" />
     <ClCompile Include="Game1Controller.cpp" />
+    <ClCompile Include="Game2Background.cpp" />
+    <ClCompile Include="Game2Controller.cpp" />
+    <ClCompile Include="Game2Data.cpp" />
+    <ClCompile Include="Game2InfoLayer.cpp" />
+    <ClCompile Include="Game2Layer.cpp" />
+    <ClCompile Include="Game3Controller.cpp" />
+    <ClCompile Include="Game3Data.cpp" />
+    <ClCompile Include="Game3GameLayer.cpp" />
     <ClCompile Include="MainController.cpp" />
     <ClCompile Include="Game1Data.cpp" />
     <ClCompile Include="GameLayer.cpp" />
@@ -152,8 +160,12 @@
     <ClCompile Include="Layer.cpp" />
     <ClCompile Include="MenuController.cpp" />
     <ClCompile Include="MenuLayer.cpp" />
+    <ClCompile Include="Msg2Layer.cpp" />
+    <ClCompile Include="Msg3Layer.cpp" />
     <ClCompile Include="MsgLayer.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="Snake.cpp" />
     <ClCompile Include="Sqeare.cpp" />
     <ClCompile Include="Straight.cpp" />
     <ClCompile Include="tetris.cpp" />
@@ -168,6 +180,14 @@
     <ClInclude Include="BaseController.h" />
     <ClInclude Include="BaseFigure.h" />
     <ClInclude Include="DataVO.h" />
+    <ClInclude Include="Game2Background.h" />
+    <ClInclude Include="Game2Controller.h" />
+    <ClInclude Include="Game2Data.h" />
+    <ClInclude Include="Game2InfoLayer.h" />
+    <ClInclude Include="Game2Layer.h" />
+    <ClInclude Include="Game3Controller.h" />
+    <ClInclude Include="Game3Data.h" />
+    <ClInclude Include="Game3GameLayer.h" />
     <ClInclude Include="GameConfig.h" />
     <ClInclude Include="Game1Controller.h" />
     <ClInclude Include="GameData.h" />
@@ -178,8 +198,12 @@
     <ClInclude Include="Layer.h" />
     <ClInclude Include="MenuController.h" />
     <ClInclude Include="MenuLayer.h" />
+    <ClInclude Include="Msg2Layer.h" />
+    <ClInclude Include="Msg3Layer.h" />
     <ClInclude Include="MsgLayer.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Snake.h" />
     <ClInclude Include="Sqeare.h" />
     <ClInclude Include="Straight.h" />
     <ClInclude Include="Triangle.h" />
